--- a/app/templates/envioCorreo.html
+++ b/app/templates/envioCorreo.html
@@ -4,7 +4,11 @@
          <div class = 'center'> 
                 <h3>{{razonSocial}} Gracias por contratar nuestros servicios</h3> 
                 <p>
-                    En el siguiente enlace puede acceder a la plataforma para comenzar con el sistema
+                    En el siguiente enlace puede acceder a la plataforma para comenzar con el sistema:<br><br>
+                    
+                    Link: http:localhost:4000/create-count'<br>
+                    Código de verificación: {{token}}
+
                 </p>       
          </div>
     </body>
