--- a/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.html
@@ -24,7 +24,7 @@
                                                 <div class="form-floating mb-3 mb-md-0" >
                                                     <input class="form-control"
                                                         id="inputRUC" name="ruc" type="text"
-                                                        placeholder="Ingrese el RUC de su empresa" formControlName="ruc">
+                                                        placeholder="Ingrese el RUC de su empresa" (input)="validarRuc()" formControlName="ruc">
                                                     <label for="inputRUC">RUC</label>
                                                     <span class="lead error" *ngIf="(formRef.submitted && createAccount.get('empresa.ruc')?.hasError('required')) || createAccount.get('empresa.ruc')?.hasError('minlength') || createAccount.get('empresa.ruc')?.hasError('maxlength') || createAccount.get('empresa.ruc')?.hasError('pattern')">Ingrese RUC válido</span>
                                                 </div>
