--- a/app/templates/envioCorreo.html
+++ b/app/templates/envioCorreo.html
@@ -6,7 +6,7 @@
                 <p>
                     En el siguiente enlace puede acceder a la plataforma para comenzar con el sistema:<br><br>
                     
-                    Link: http:localhost:4000/create-count'<br>
+                    Link: http://localhost:4200/create-cuenta<br>
                     Código de verificación: {{token}}
 
                 </p>       
