--- a/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.html
@@ -27,9 +27,9 @@
                                                 <div class="form-floating mb-3 mb-md-0" >
                                                     <input class="form-control"
                                                         id="inputRUC" name="ruc" type="text"
-                                                        placeholder="Ingrese el RUC de su empresa" (input)="validarRuc()" formControlName="ruc">
+                                                        placeholder="Ingrese el RUC de su empresa" formControlName="ruc">
                                                     <label for="inputRUC">RUC</label>
-                                                    <span class="lead error" *ngIf="(formRef.submitted && createAccount.get('empresa.ruc')?.hasError('required')) || createAccount.get('empresa.ruc')?.hasError('minlength') || createAccount.get('empresa.ruc')?.hasError('maxlength') || createAccount.get('empresa.ruc')?.hasError('pattern')">Ingrese RUC válido</span>
+                                                    <span class="lead error" *ngIf="(formRef.submitted && createAccount.get('empresa.ruc')?.hasError('required')) || createAccount.get('empresa.ruc')?.hasError('minlength') || createAccount.get('empresa.ruc')?.hasError('maxlength') || createAccount.get('empresa.ruc')?.hasError('pattern') || validarRuc()">Ingrese RUC válido</span>
                                                     <!-- <div class={{ruc_d}} style='color:red'>{{ruc_content}}</div> -->
                                                 </div>
                                             </div>
@@ -131,9 +131,9 @@
                                                 <div class="form-floating" >
                                                     <input class="form-control" id="validatePassword"
                                                         name="passwordvalidate" type="password"
-                                                        placeholder="Ingrese su contraseña nuevamente" (input)="validarConfPassword()" formControlName="confpassword">
+                                                        placeholder="Ingrese su contraseña nuevamente" formControlName="confpassword">
                                                     <label for="inputvalidatePassword">Valide su contraseña</label>
-                                                    <span class="lead error {{msg_d}}" >{{msg_content}}</span>
+                                                    <span class="lead error"*ngIf="validacionPassword()">La contraseñas no coinciden</span>
                                                 </div>
                                             </div>
                                             <div class="col-md-6 mb-3">
