--- a/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.html
@@ -25,8 +25,8 @@
                                             <p id="nameOrg">Organización</p>
                                             <div class="col-md-6 mb-3">
                                                 <div class="form-floating mb-3 mb-md-0" >
-                                                    <input class="form-control"
-                                                        id="inputRUC" name="ruc" type="text"
+                                                    <input #rucInput class="form-control"
+                                                        id="inputRUC" (input)="validate.validarCampNum(rucInput,13)" name="ruc" type="text"
                                                         placeholder="Ingrese el RUC de su empresa" formControlName="ruc">
                                                     <label for="inputRUC">RUC</label>
                                                     <span class="lead error" *ngIf="(formRef.submitted && createAccount.get('empresa.ruc')?.hasError('required')) || createAccount.get('empresa.ruc')?.hasError('minlength') || createAccount.get('empresa.ruc')?.hasError('maxlength') || createAccount.get('empresa.ruc')?.hasError('pattern') || validarRuc()">Ingrese RUC válido</span>
@@ -56,10 +56,10 @@
 
                                             <div class="col-md-6 mb-3">
                                                 <div class="form-floating" >
-                                                    <input class="form-control" id="inputNumphone" name="telefono"
-                                                        type="text" placeholder="Ingrese su numero de telefono" formControlName='telefono'>
+                                                    <input #telf class="form-control" id="inputNumphone" name="telefono"
+                                                        type="text" placeholder="Ingrese su numero de telefono" (input)="validate.validarCampNum(telf,10)" formControlName='telefono'>
                                                     <label for="inputNumphone">Teléfono</label>
-                                                    <span class="lead error" *ngIf="(formRef.submitted && createAccount.get('empresa.telefono')?.hasError('required')) || createAccount.get('empresa.telefono')?.hasError('minlength') || createAccount.get('empresa.telefono')?.hasError('maxlength') || createAccount.get('empresa.telefono')?.hasError('pattern')">Ingrese numero telefono válido</span>
+                                                    <span class="lead error" *ngIf="(formRef.submitted && createAccount.get('empresa.telefono')?.hasError('required')) || createAccount.get('empresa.telefono')?.hasError('minlength') || createAccount.get('empresa.telefono')?.hasError('maxlength')">Ingrese numero telefono válido</span>
                                                 </div>
                                             </div>
 
@@ -138,10 +138,10 @@
                                             </div>
                                             <div class="col-md-6 mb-3">
                                                 <div class="form-floating" >
-                                                    <input class="form-control" id="inputNumphoneUser" name="telefono"
-                                                        type="text" placeholder="Ingrese su numero de telefono" formControlName='telefono'>
+                                                    <input #telf2 class="form-control" id="inputNumphoneUser" name="telefono"
+                                                        type="text" placeholder="Ingrese su numero de telefono" (input)="validate.validarCampNum(telf,10)" formControlName='telefono'>
                                                     <label for="inputNumphoneUser">Teléfono</label>
-                                                    <span class="lead error" *ngIf="(formRef.submitted && createAccount.get('usuario.telefono')?.hasError('required')) || createAccount.get('usuario.telefono')?.hasError('minlength') || createAccount.get('usuario.telefono')?.hasError('maxlength') || createAccount.get('usuario.telefono')?.hasError('pattern')">Ingrese numero telefono válido</span>
+                                                    <span class="lead error" *ngIf="(formRef.submitted && createAccount.get('usuario.telefono')?.hasError('required')) || createAccount.get('usuario.telefono')?.hasError('minlength') || createAccount.get('usuario.telefono')?.hasError('maxlength')">Ingrese numero telefono válido</span>
                                                 </div>
                                             </div>
 
