--- a/Proyecto/src/app/componentes/pagina_comercial/plan/plan.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/plan/plan.component.html
@@ -1,3 +1,4 @@
+<nav_bar></nav_bar>
 <section class="section-header bg-primary text-white pb-7 pb-lg-11">
     <div class="container-fluid">
         <div id ="plan-header" class="row justify-content-center mb-6">
