--- a/Proyecto/src/app/componentes/pagina_comercial/nav/nav.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/nav/nav.component.html
@@ -8,7 +8,7 @@
             <li class="nav-item"><a class="nav-link nb_element" [routerLink]="['/planes']" (click) = "colornb($event)">Planes</a> <!--Definir rutas --></li>
             <li class="nav-item"><a class="nav-link nb_element" (click) = "colornb($event)">Noticias</a></li>
             <li class="nav-item"><a class="nav-link nb_element" (click) = "colornb($event)">Contáctenos</a></li>
-            <li class="nav-item"><a class="nav-link btn btn-primary  py-2 px-3" [routerLink]='["login/"]'>Ingresar</a></li>
+            <li class="nav-item"><a class="nav-link btn btn-primary  py-2 px-3" [routerLink]='["/login"]'>Ingresar</a></li>
         </ul>    
     </div>
 </nav>
