--- a/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
@@ -1,5 +1,5 @@
-<body>
-    <div id="layoutAuthentication">
+<nav_bar></nav_bar>
+    <div id="body">
         <div id="layoutAuthentication_content">
             <main>
                 <div class="container">
@@ -86,6 +86,3 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
-
-
-</body>
