--- a/Proyecto/src/app/login/login.component.html
+++ b/Proyecto/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<nav_bar></nav_bar>
 <body class="bg-primary">
     <div id="layoutAuthentication">
         <div id="layoutAuthentication_content">
