--- a/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
@@ -12,8 +12,8 @@
                                     [formGroup]="registroForm"
                                     autocomplete="off"
                                     novalidate
-                                    (ngSubmit) = "form.submit()"
-                                    #formRef="ngForm"  action="http://localhost:8000/registro/" method="POST"
+                                    (ngSubmit) = "enviarSolicitud(registroForm.value)"
+                                    #formRef="ngForm"  action="" method="POST"
                                     >
                                         <div class="row mb-3">
                                             <div class="col-md-6">
@@ -32,9 +32,9 @@
                                             </div>
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="inputEmail" name="email" type="email" placeholder="name@example.com" formControlName="email">
+                                            <input class="form-control" id="inputEmail" name="email" type="email" placeholder="name@example.com" formControlName="correo">
                                             <label for="inputEmail">Correo electrónico</label>
-                                            <span class="lead error" *ngIf="(formRef.submitted && registroForm.get('email')?.hasError('required')) || registroForm.get('email')?.hasError('minlength') || registroForm.get('email')?.hasError('pattern')">*Ingrese correo válido</span>
+                                            <span class="lead error" *ngIf="(formRef.submitted && registroForm.get('correo')?.hasError('required')) || registroForm.get('correo')?.hasError('minlength') || registroForm.get('correo')?.hasError('pattern')">*Ingrese correo válido</span>
                                         </div>
                                         <div class="row mb-3">
                                             <div class="col-md-6">
