--- a/Proyecto/src/app/login/login.component.html
+++ b/Proyecto/src/app/login/login.component.html
@@ -1,6 +1,7 @@
 <nav_bar></nav_bar>
-<body class="bg-primary">
-    <div id="layoutAuthentication">
+
+<section class="bg-primary">
+    <div id="layoutAuthentication bg-primary">
         <div id="layoutAuthentication_content">
             <main>
                 <div class="container">
@@ -9,7 +10,7 @@
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                                 <div class="card-body">
-                                    <form  action="http://localhost:8000/api/auth/" method="POST"
+                                    <form
                                     [formGroup]="login"
                                     #formRef="ngForm">
                                         <div class="{{msg_d}}" id="user_invalid">
@@ -18,8 +19,6 @@
                                         <div class="form-floating mb-3">
                                             <input formControlName="email" (input)="validacion('email')" class="form-control" id="inputUser" type="text" placeholder="email" name="username" minlength='4'>
                                             <label for="inputEmail">Email</label>
-                                            <!--
-                                            <span class="lead error" *ngIf="(formRef.submitted && login.get('email')?.hasError('required')) || login.get('email')?.hasError('minlength') ||  login.get('email')?.hasError('pattern')">Ingrese email válido</span>-->
                                         </div>
                                         <div class="form-floating mb-3">
                                             <input formControlName="password" (input)="validacion('password')" class="form-control" id="inputPassword" type="password" placeholder="password" name="password" minlength='8'>
@@ -36,9 +35,6 @@
                                         </div>
                                     </form>
                                 </div>
-                                <!-- <div class="card-footer text-center py-3">
-                                    <div class="small"><input type="button"  value="Enviar"></div>
-                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -63,5 +59,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
 
-
-</body>
+</section>
