--- a/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
@@ -18,7 +18,7 @@
                                         <div class="row mb-3">
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputRazonSocialName" name="razonsocial" type="text" placeholder="Ingresa nombre de tu empresa" formControlName="razonSocial">
+                                                    <input class="form-control" id="inputRazonSocialName" name="razonSocial" type="text" placeholder="Ingresa nombre de tu empresa" formControlName="razonSocial">
                                                     <label for="inputFirstName">Razon Social</label>
                                                     <span class="lead error" *ngIf="(formRef.submitted && registroForm.get('razonSocial')?.hasError('required')) || registroForm.get('razonSocial')?.hasError('minlength') || registroForm.get('razonSocial')?.hasError('maxlength') || registroForm.get('razonSocial')?.hasError('pattern')">*Ingrese una razon social por favor</span>
                                                 </div>
