--- a/Proyecto/src/app/componentes/sitioAdmin/empresa/empresa.component.css
+++ b/Proyecto/src/app/componentes/sitioAdmin/empresa/empresa.component.css
@@ -12,6 +12,13 @@ h2{
     width: 1400px;
 }
 
+#formulario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #aggEmpresa{
     display: flex;
     justify-content: flex-end;
