--- a/Proyecto/src/app/componentes/sitioAdmin/empresa/empresa.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/empresa/empresa.component.html
@@ -3,7 +3,9 @@
     <nav-admin></nav-admin>
     <div id="tabla" class="table-responsive">
         <div id="aggEmpresa">
-            <input ng-click="ShowForm()" ng-hide="formVisibility" type="submit" value="Agregar Empresa" class="btn btn-primary btn-block" cdkStepperNext>
+            <input id="btnEmp" (click)="mostrar()" type="submit" value="Agregar Empresa" class="btn btn-primary btn-block" cdkStepperNext>
+        </div>
+        <div id="formulario">
         </div>
         <h2>Empresas</h2>
         <div class="table-wrapper">
@@ -18,21 +20,21 @@
                         <th>Acciones</th>
                     </tr>
                 </thead>
-                
+
                 <tbody>
-                    
-                        <tr>
-                            <td>Empresa1</td>
-                            <td>Empresa1</td>
-                            <td>Empresa1</td>
-                            <td>Empresa1</td>
-                            <td>Empresa1</td>
-                            <td id="botones-acciones">
-                                <input type="submit" value="Editar" class="btn btn-primary btn-block">
-                                <input type="submit" value="Eliminar" class="btn btn-danger btn-block">
-                            </td>
-                        </tr>
-                        <!--
+
+                    <tr>
+                        <td>Empresa1</td>
+                        <td>Empresa1</td>
+                        <td>Empresa1</td>
+                        <td>Empresa1</td>
+                        <td>Empresa1</td>
+                        <td id="botones-acciones">
+                            <input type="submit" value="Editar" class="btn btn-primary btn-block">
+                            <input type="submit" value="Eliminar" class="btn btn-danger btn-block">
+                        </td>
+                    </tr>
+                    <!--
                     <% clientes.forEach(function(cliente){ %>
                         <tr>
                         <td><%= cliente.id %></td>
@@ -62,39 +64,5 @@
                 </ul>
             </div>
         </div>
-        
-        <div ng-show="formVisibility" class="wrapper">
-            <h2>Agregar Empresas</h2>
-            <div class="form-floating mb-3 mb-md-0">
-                <input class="form-control" id="inputRUC" name="ruc" type="text"
-                    placeholder="Ingrese el RUC de su empresa">
-                <label for="inputRUC">RUC</label>
-            </div>
-
-            <div class="form-floating mb-3 mb-md-0">
-                <input class="form-control" id="inputEmail" name="mailorganizacion" type="email"
-                    placeholder="name@example.com" formControlName="email">
-                <label for="inputEmail">Correo Electrónico</label>
-            </div>
-
-            <div class="form-floating mb-3 mb-md-0">
-                <input class="form-control" id="inputRazonSocial" name="razonsocial" type="text"
-                    placeholder="Ingrese la Razon social de su empresa" formControlName="razonSocial">
-                <label for="inputRazonSocial">Razón Social</label>
-            </div>
-
-            <div class="form-floating">
-                <input #telf class="form-control" id="inputNumphone" name="telefono" type="text"
-                    placeholder="Ingrese su numero de telefono" formControlName='telefono'>
-                <label for="inputNumphone">Teléfono</label>
-            </div>
-
-            <div class="form-floating">
-                <input class="form-control" id="inputDireccion" name="direccion" type="text"
-                    placeholder="Ingrese su dirección" formControlName='direccion'>
-                <label for="inputDireccion">Dirección</label>
-            </div>
-        </div>
-
     </div>
 </div>
