--- a/Proyecto/src/app/componentes/sitioAdmin/pop-up/pop-up.component.css
+++ b/Proyecto/src/app/componentes/sitioAdmin/pop-up/pop-up.component.css
@@ -11,5 +11,12 @@
 
 #container-form{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+}
+
+#container{
+    border: 1px solid black;
+    padding: 10px;
 }
