--- a/Proyecto/src/app/componentes/sitioAdmin/nav-admin/nav-admin.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/nav-admin/nav-admin.component.html
@@ -1,11 +1,10 @@
-<div id="container-nav">
-<nav id="sidebarMenu">
+<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
     <div class="position-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/admin">
                     <span data-feather="admin"></span>
-                    Dashboard
+                    Perfil
                 </a>
             </li>
             <li *ngIf="viewEmpresa" class="nav-item">
@@ -36,6 +35,24 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">
+                    <span data-feather="bar-chart-2"></span>
+                    **********
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <span data-feather="bar-chart-2"></span>
+                    **********
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <span data-feather="bar-chart-2"></span>
+                    **********
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
                     <span data-feather="layers"></span>
                     **********
                 </a>
@@ -43,4 +60,3 @@
         </ul>
     </div>
 </nav>
-</div>
