--- a/Proyecto/src/app/componentes/sitioAdmin/empresa-temp/empresa-temp.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/empresa-temp/empresa-temp.component.html
@@ -2,48 +2,20 @@
 <div id="container">
     <nav-admin></nav-admin>
     <div id="tabla" class="table-responsive">
+        <div id="caja"></div>
         <h2>Empresas Temporales</h2>
         <div class="table-wrapper">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th>RUC</th>
+                        
                         <th>Razon Social</th>
-                        <th>Correo</th>
                         <th>Teléfono</th>
-                        <th>Dirección</th>
+                        <th>Correo</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
-                
-                <tbody>
-                    
-                        <tr>
-                            <td>Empresa1</td>
-                            <td>Empresa1</td>
-                            <td>Empresa1</td>
-                            <td>Empresa1</td>
-                            <td>Empresa1</td>
-                            <td id="botones-acciones">
-                                <input type="submit" value="Enviar Correo" class="btn btn-primary btn-block">
-                                <input type="submit" value="Eliminar" class="btn btn-danger btn-block">
-                            </td>
-                        </tr>
-                        <!--
-                    <% clientes.forEach(function(cliente){ %>
-                        <tr>
-                        <td><%= cliente.id %></td>
-                        <td><%= cliente.nombre %></td>
-                        <td><%= cliente.apellido %></td>
-                        <td><%= cliente.fechaNacimiento.toLocaleDateString('en-US') %></td> 
-                        <td><%= cliente.estado %></td>                                       
-                        <td>
-                            <a href="#" class="settings" title="Settings" data-toggle="tooltip"><i class="material-icons">&#xE8B8;</i></a>
-                            <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE5C9;</i></a>
-                        </td>
-                      </tr>
-                       
-                    <% }); %>-->
+                <tbody id="tablasEmptmp">                    
                 </tbody>
             </table>
             <div id="indices">
