--- a/Proyecto/src/app/componentes/sitioAdmin/empresa/empresa.component.css
+++ b/Proyecto/src/app/componentes/sitioAdmin/empresa/empresa.component.css
@@ -2,6 +2,13 @@ h2{
     margin-left: 20px;
 }
 
+#caja{
+    display: flex;
+    background-color: black;
+    height: 120px;
+    border-bottom-right-radius: 18% 75%;
+}
+
 #container{
     display: flex;
     flex-direction: row;
