--- a/Proyecto/src/app/componentes/sitioAdmin/empresa/empresa.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/empresa/empresa.component.html
@@ -2,6 +2,7 @@
 <div id="container">
     <nav-admin></nav-admin>
     <div id="tabla" class="table-responsive">
+        <div id="caja"></div>
         <div id="aggEmpresa">
             <input id="btnEmp" (click)="mostrar()" type="submit" value="Agregar Empresa" class="btn btn-primary btn-block" cdkStepperNext>
         </div>
