--- a/Proyecto/src/app/componentes/sitioAdmin/grupos-permisos/grupos-permisos.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/grupos-permisos/grupos-permisos.component.html
@@ -2,38 +2,28 @@
 <div id="container">
     <nav-admin></nav-admin>
     <div id="tabla" class="table-responsive">
-        <div id="aggEmpresa">
-            <input id="btnEmp" type="submit" (click) = "listar()" value="Agregar Empresa" class="btn btn-primary btn-block" cdkStepperNext>
-        </div>
         <div id="formulario">
+            <select name="miselect">
+            <option [value]="item" *ngFor="let item of listGrupos">{{item}}</option>
+            </select>
+            <select name="miselect">
+            <option [value]="item" *ngFor="let item of listPermisos">{{item}}</option>
+            </select>
         </div>
-        <h2>Empresas</h2>
+        <h2>Permisos y Grupos</h2>
         <div class="table-wrapper">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th>RUC</th>
-                        <th>Razon Social</th>
+                        <th>ID usuario</th>
+                        <th>Superusuario</th>
+                        <th>Username</th>
                         <th>Correo</th>
-                        <th>Teléfono</th>
-                        <th>Dirección</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
 
-                <tbody>
-
-                    <tr *ngFor = "let grupo of listGrupos">
-                        <td>{{grupo}}</td>
-                        <td>Empresa1</td>
-                        <td>Empresa1</td>
-                        <td>Empresa1</td>
-                        <td>Empresa1</td>
-                        <td id="botones-acciones">
-                            <input type="submit" value="Editar" class="btn btn-primary btn-block">
-                            <input type="submit" value="Eliminar" class="btn btn-danger btn-block">
-                        </td>
-                    </tr>
+                <tbody id = "usuarios">
                 </tbody>
             </table>
             <div id="indices">
