--- a/assets/front_end/assets/css/dashboard.css
+++ b/assets/front_end/assets/css/dashboard.css
@@ -1,3 +1,4 @@
+/*
 body {
   font-size: .875rem;
 }
@@ -8,21 +9,13 @@ body {
   vertical-align: text-bottom;
 }
 
-/*
- * Sidebar
- */
-
 .sidebar {
   position: fixed;
   top: 0;
-  /* rtl:raw:
-  right: 0;
-  */
   bottom: 0;
-  /* rtl:remove */
   left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
+  z-index: 100; 
+  padding: 48px 0 0; 
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
@@ -38,7 +31,7 @@ body {
   height: calc(100vh - 48px);
   padding-top: .5rem;
   overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+  overflow-y: auto; 
 }
 
 .sidebar .nav-link {
@@ -65,9 +58,6 @@ body {
   text-transform: uppercase;
 }
 
-/*
- * Navbar
- */
 
 .navbar-brand {
   padding-top: .75rem;
@@ -98,3 +88,4 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
+*/
