Cambios realizados en grupos y permisos

--- a/Proyecto/src/app/componentes/sitioAdmin/grupos-permisos/grupos-permisos.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/grupos-permisos/grupos-permisos.component.html
@@ -3,10 +3,10 @@
     <nav-admin></nav-admin>
     <div id="tabla" class="table-responsive">
         <div id="formulario">
-            <select name="miselect">
+            <select id ="grupos" name="miselect">
             <option [value]="item" *ngFor="let item of listGrupos">{{item}}</option>
             </select>
-            <select name="miselect">
+            <select id="permisos" name="miselect">
             <option [value]="item" *ngFor="let item of listPermisos">{{item}}</option>
             </select>
         </div>
