--- a/Proyecto/src/app/componentes/sitioAdmin/pop-up/pop-up.component.css
+++ b/Proyecto/src/app/componentes/sitioAdmin/pop-up/pop-up.component.css
@@ -20,3 +20,15 @@
     border: 1px solid black;
     padding: 10px;
 }
+#formulario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.grupos-permisos{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: nowrap;
+}
