--- a/Proyecto/src/app/componentes/sitioAdmin/pop-up/pop-up.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/pop-up/pop-up.component.html
@@ -2,47 +2,61 @@
 <div class="card-body">
     <form>
         <div>
-            <div id="container-form">
-                <div id="container"class="text-center">
-                    <div class="mb-3">
-                        <div class="form-floating mb-3 mb-md-0">
-                            <input class="form-control" id="inputRUC" name="ruc" type="text"
-                                placeholder="Ingrese el RUC de su empresa">
-                            <label for="inputRUC">RUC</label>
+            <div id="container-form" class ="formulario">
+                <div id="container mb-12"class="text-center">
+                    <div class = "mb-6 row grupos-permisos">
+                        <div class="mb-6">
+                            <div class="form-floating mb-12 mb-md-0">
+                                <input class="form-control" id="inputRUC" name="ruc" type="text"
+                                    placeholder="Nombres de la persona">
+                                <label for="inputRUC">Nombres</label>
+                            </div>
+                        </div>
+                        <div class ="mb-6">
+                            <div class="form-floating mb-12 mb-md-0">
+                                <input class="form-control" id="inputRUC" name="ruc" type="text"
+                                    placeholder="Nombre de usuario">
+                                <label for="inputRUC">Usuario</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class ="mb-6 row grupos-permisos">
+                        <div class="mb-3">
+                            <div>Grupos disponibles</div>
+                            <div class="form-floating">
+                                <select id ="grupos" name="miselect" multiple class ="filtered">
+                                    <option [value]="item" *ngFor="let item of listGrupos">{{item}}</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <div>Grupos seleccionados</div>
+                            <div class="form-floating">
+                                <input #telf class="form-control" id="inputNumphone" name="telefono" type="text"
+                                    placeholder="Ingrese su numero de telefono">
+                                <label for="inputNumphone">Grupos a agregar</label>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="mb-3">
-                        <div class="form-floating mb-3 mb-md-0">
-                            <input class="form-control" id="inputEmail" name="mailorganizacion" type="email"
-                                placeholder="name@example.com">
-                            <label for="inputEmail">Correo Electrónico</label>
+                    <div class ="mb-6 row grupos-permisos">
+                        <div class="mb-3">
+                            <div>Permisos disponibles</div>
+                            <div class="form-floating">
+                                <select id="permisos" name="miselect2" multiple class ="filtered">
+                                    <option [value]="item" *ngFor="let item of listPermisos">{{item}}</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <div class="form-floating">
+                                <input #telf class="form-control" id="inputNumphone" name="telefono" type="text"
+                                    placeholder="Ingrese su numero de telefono">
+                                <label for="inputNumphone">Permisos a agregar</label>
+                            </div>
                         </div>
                     </div>
-
-                    <div class="mb-3">
-                        <div class="form-floating mb-3 mb-md-0">
-                            <input class="form-control" id="inputRazonSocial" name="razonsocial" type="text"
-                                placeholder="Ingrese la Razon social de su empresa">
-                            <label for="inputRazonSocial">Razón Social</label>
-                        </div>
-                    </div>
-
-                    <div class="mb-3">
-                        <div class="form-floating">
-                            <input #telf class="form-control" id="inputNumphone" name="telefono" type="text"
-                                placeholder="Ingrese su numero de telefono">
-                            <label for="inputNumphone">Teléfono</label>
-                        </div>
-                    </div>
-
-                    <div class="mb-3">
-                        <div class="form-floating">
-                            <input class="form-control" id="inputDireccion" name="direccion" type="text"
-                                placeholder="Ingrese su dirección">
-                            <label for="inputDireccion">Dirección</label>
-                        </div>
-                    </div>
+ 
                     <div id="buttons" class="mt-4 mb-0">
                         <input type="button" value="Close" class="btn btn-primary btn-block">
                         <input type="submit" value="Guardar" class="btn btn-primary btn-block">
@@ -52,4 +66,7 @@
             </div>
         </div>
     </form>
+</div>
+<div id="formulario">
+            
 </div>
