--- a/Proyecto/src/app/componentes/sitioAdmin/pop-up/pop-up.component.css
+++ b/Proyecto/src/app/componentes/sitioAdmin/pop-up/pop-up.component.css
@@ -31,4 +31,26 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: nowrap;
+    padding: 2%;
+}
+.campos{
+    margin: 2%;
+}
+
+select{
+    width:300px;
+    height: 200px;
+}
+.containerSelect{
+    width: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+}
+
+.containerSelect btnSelect{
+    margin-top: 15px;
+    width: 20px;
+    height: 10px;
 }
