--- a/Proyecto/src/app/componentes/sitioAdmin/pop-up/pop-up.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/pop-up/pop-up.component.html
@@ -49,15 +49,15 @@
                         </div>
 
                         <div class="mb-2 containerSelect ">
-                            <button class= "btnSelect btn btn-primary btn-block"> > </button>
-                            <button class = "btnSelect btn btn-primary btn-block"> < </button>
+                            <button (click) = "asignarGrupo()" class= "btnSelect btn btn-primary btn-block"> > </button>
+                            <button (click) = "removerGrupo()" class = "btnSelect btn btn-primary btn-block"> < </button>
                         </div>
 
                         <div class="mb-4">
                             <div><span><h4>Grupos seleccionados</h4></span></div>
                             <div class="form-floating">
                                 <select id ="gruposSelect" name="miselect2" multiple class ="filtered campos">
-                                    <option></option>
+
                                 </select>
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                         </div>
 
                         <div class="mb-2 containerSelect ">
-                            <button class= "btnSelect btn btn-primary btn-block"> > </button>
+                            <button (click) = "asignarPermiso()" class= "btnSelect btn btn-primary btn-block"> > </button>
                             <button class = "btnSelect btn btn-primary btn-block"> < </button>
                         </div>
 
@@ -82,7 +82,6 @@
                             <div><span><h4>Permisos seleccionados</h4></span></div>
                             <div class="form-floating">
                                 <select id="permisosSelect" name="miselect4" multiple class ="filtered campos">
-                                    <option></option>
                                 </select>
                             </div>
                         </div>
