--- a/Proyecto/src/app/componentes/sitioAdmin/partials/nav-admin/nav-admin.component.html
+++ b/Proyecto/src/app/componentes/sitioAdmin/partials/nav-admin/nav-admin.component.html
@@ -30,7 +30,7 @@
             <li class="nav-item">
                 <a class="nav-link" href ="/grupos-permisos">
                     <span data-feather="bar-chart-2"></span>
-                    **********
+                    Grupos y Permisos
                 </a>
             </li>
             <li *ngIf="isUser" class="nav-item">
